--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,13 @@
 {
   "type": "module",
   "dependencies": {
-    "mongodb": "^4.2.0"
+    "express": "^4.17.1",
+    "mongodb": "^4.2.0",
+    "mongoose": "^6.0.13",
+    "mongoose-schema": "^0.0.7",
+    "mongoose-schema-types": "^1.2.6",
+    "mongoose-type-email": "^1.1.2",
+    "mongoose-unique-validator": "^3.0.0"
   },
   "devDependencies": {
     "eslint": "^8.2.0",
