used npm install to update plugins

--- a/backend/package.json
+++ b/backend/package.json
@@ -16,5 +16,14 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0"
-  }
+  },
+  "name": "backend",
+  "description": "Front-end and back-end to manage shops",
+  "version": "1.0.0",
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC"
 }
